[package]
name = "TodoList"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[dependencies]
chrono = "0.4.38"
iced = { version = "0.12.1", default-features = false, features = [
    "advanced",
    "tokio",
] }
